--- a/ecommerceProject/src/main/resources/application.properties
+++ b/ecommerceProject/src/main/resources/application.properties
@@ -14,5 +14,7 @@ spring.mail.username=ritikumar360@gmail.com
 spring.mail.password=ijgcrfhncbrogrul
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+#actuator
+management.endpoints.web.exposure.include=*
 
 
